# QTStudy

./: .gitignore  CMakeLists.txt  README.md  resources.qrc
src/: drawview.cpp  drawview.h  main.cpp  mainwindow.cpp  mainwindow.h  trianglation.cpp  trianglation.h
